============ Version 0.99.12

2004-06-04  Bastien Nocera  <hadess@hadess.net>

	* NEWS:
	* configure.in: 0.99.12

2004-05-30  Bastien Nocera  <hadess@hadess.net>

	* src/totem-playlist.c: (totem_playlist_add_files): Adding files to the
	playlist shouldn't say "Open" but "Add" (Closes: #143403)

2004-05-30  Bastien Nocera  <hadess@hadess.net>

	* src/bacon-video-widget-gst.c: (bacon_video_widget_open),
	(bacon_video_widget_get_mrls): the GStreamer backend should use
	cdda: not cda: for audio CD playback
	* src/bacon-video-widget-xine.c: (bacon_video_widget_realize):
	don't crash when a file's opened on _realize, simply warn
	* src/totem.c: (totem_playing_dvd): all mrls starting with dvd: are
	DVDs playing, not just "dvd:/" (Closes: #143002)

2004-05-29  Bastien Nocera  <hadess@hadess.net>

	* data/totem.applications:
	* data/totem.keys: Plenty more Real Player-like mime-types

2004-05-13  Bastien Nocera  <hadess@hadess.net>

	* src/totem-playlist.c: (totem_playlist_new):
	* src/totem.c: (on_properties1_activate): Remove the separators
	(hmmm) (Closes: #142452)

2004-05-10  Samúel Jón Gunnarsson  <sammi@techattack.nu>

	* configure.in: Added "is" to ALL_LINGUAS

2004-05-10  Bastien Nocera  <hadess@hadess.net>

	* src/.cvsignore: upd
	* src/bacon-video-widget-xine.c: (bacon_video_widget_realize),
	(bacon_video_widget_open), (bacon_video_widget_get_mrls),
	(bacon_video_widget_set_video_device):
	* src/bacon-video-widget.h: add a way to set the video device,
	for vanity, add a warning if there's a file opened before realizing
	the widget, don't warn if there's no output at all and we're
	opening an audio-only file

2004-05-06  Bastien Nocera  <hadess@hadess.net>

	* NEWS: upd
	* src/bacon-video-widget-gst.c:
	(bacon_video_widget_get_metadata_string): avoid a possible crash
	when we actually use the Musicbrainz CD Index

2004-05-06  Bastien Nocera  <hadess@hadess.net>

	* src/totem-pl-parser.c: (totem_pl_parser_dir_compare),