@@ -17,7 +17,7 @@ See NEWS file
 Dependencies
 ============
 
-xine-lib 1.0 rc3c or newer:
+xine-lib 1.0 rc4a or newer:
 	http://xinehq.de
 GNOME 2.2 development platform:
 	http://www.gnome.org
