@@ -1,5 +1,9 @@
 New features and significant updates in version...
 
+????:
+* Fix cases where the reason for not being able to open a file could be missing
+* Handle Ctrl+P to show the playlist even in hidden controls mode
+
 0.99.12:
 * Starts of a Mozilla plugin
 * Fixes for Right-to-Left languages
